Fix vertical container spacing for the options

--- a/options.css
+++ b/options.css
@@ -20,8 +20,22 @@
 
 /* End matching Firefox styles */
 
+/* These prevent the <browser> from adding a scrollbar; it seems to calculate
+ * the height without taking these margins into account. */
+body > :last-child {
+    margin-bottom: 0;
+}
+body > :first-child {
+    margin-top: 0;
+}
+
 body {
     line-height: 1.8;
+
+    /* The focus ring from in-content/common.css is 4px thick, so add 5px
+     * padding so it doesn't get cut off at all. */
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 input[type='number'] {
